DontExpiReBack/src/main/java/org/example/error/InvadlidEmailForm.java
package org.example.error;

public class InvadlidEmailForm extends RuntimeException {
    public InvadlidEmailForm(String message) {
        super(message);
    }
}
